[package]
name = "wine-cellar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["form", "multipart"] }
axum-htmx = "0.8.1"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
image = "0.25.9"
maud = { version = "0.27.0", features = ["axum"] }
percent-encoding = "2.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio", "sqlite"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
